# gregorovius-api

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  config.yml  entrypoint.sh  pyproject.toml
.github/workflows/: github-ci.yml
app/: __init__.py  config.py  controller.py  filters.py  model.py  service.py
data/: gesamtdatenbank.csv  gesamtdatenbank_namen.csv
fixtures/: aufbewahrungsorte.py
models/: __init__.py  main.py
service/: __init__.py  beacon_service.py  filters.py  gnd_service.py  helpers.py  image_service.py  letter_index_service.py  main.py
tests/: test_service.py
