[tool.poetry]
name = "gregorovius-api"
version = "1.5.3"
description = "Backend API layer for the Gregorovius Correspondence Edition"
authors = ["Theodor Costea <costea@bbaw.de>", "Oliver Pohl <kontakt@wildegans-solutions.de>"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^0.32.2"
snakesist = {version = "0.1.0-b1", allow-prereleases = true}
uvicorn = "^0.9.0"
fastapi = "^0.38.1"
pyyaml = "^5.1"
schedule = "^0.6.0"
xmltodict = "^0.12.0"
diskcache = "^5.4.0"
aiofiles = "0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
