[tool.poetry]
name = "gregorovius-api"
version = "1.6.1"
description = "Backend API layer for the Gregorovius Correspondence Edition"
authors = ["Theodor Costea <costea@bbaw.de>", "Oliver Pohl <kontakt@wildegans-solutions.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.4"
snakesist = "^0.3.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pyyaml = "^6.0.2"
schedule = "^1.2.2"
xmltodict = "^0.14.2"
diskcache = "^5.6.3"
aiofiles = "24.1.0"
Pillow = "^11.1.0"
openpyxl = "^3.1.5"
requests = "^2.32.4"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
